Overriding text-secondary color for A11Y contrast correctness

--- a/css/style.css
+++ b/css/style.css
@@ -11859,6 +11859,10 @@ textarea.form-control-lg {
 }
 /* VARIABLES */
 /** Bootstrap Overrides **/
+:root {
+  --bs-secondary-rgb: #737373;
+}
+
 .node__content {
   font-size: 1rem;
 }
